--- a/Tutorials/example_systems/1_three_zones/settings/genx_settings.yml
+++ b/Tutorials/example_systems/1_three_zones/settings/genx_settings.yml
@@ -1,18 +1,12 @@
 NetworkExpansion: 1
-ModelingToGenerateAlternativeIterations: 3
 ParameterScale: 1
 EnergyShareRequirement: 0
-PrintModel: 0
 TimeDomainReduction: 1
 Trans_Loss_Segments: 1
 CapacityReserveMargin: 0
-ModelingtoGenerateAlternativeSlack: 0.1
-MethodofMorris: 0
 StorageLosses: 1
-MultiStage: 0
-OverwriteResults: 0
+ComputeConflicts: 1
 UCommit: 2
-ModelingToGenerateAlternatives: 0
 MaxCapReq: 0
 MinCapReq: 1
 CO2Cap: 2
