--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,4 @@
 [deps]
 ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 GenX = "5d317b1e-30ec-4ed6-a8ce-8d2d88d7cfac"
+GraphRecipes = "bd48cda9-67a9-57be-86fa-5b3c104eda73"
