--- a/Tutorials/example_systems/1_three_zones/settings/highs_settings.yml
+++ b/Tutorials/example_systems/1_three_zones/settings/highs_settings.yml
@@ -1,6 +1,6 @@
 Method: "ipm"
-Feasib_Tol: 1.0e-7
+Feasib_Tol: 0.1
 run_crossover: "on"
 TimeLimit: 1.0e23
-Optimal_Tol: 1.0e-7
+Optimal_Tol: 0.1
 Pre_Solve: "choose"
