Add IJulia to deps

--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,4 @@
 ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 GenX = "5d317b1e-30ec-4ed6-a8ce-8d2d88d7cfac"
 GraphRecipes = "bd48cda9-67a9-57be-86fa-5b3c104eda73"
+IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
